Fixed CSS layout issue

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -39,6 +39,7 @@ input:focus, textarea:focus {
 }
 
 .content {
+  width: 100%;
   padding-left: 15px;
   clear: both;
   overflow: hidden;
@@ -201,20 +202,24 @@ input:focus, textarea:focus {
 }
 
 .nav-header-inner {
+  width: 100%;
   float: left;
   background: #3498DB;
   padding: 7px 15px;
-  width: 74.6687%;
 }
 
 .nav-header-inner .button {
   float: right;
 }
 
+.main-wrapper {
+  position: relative;
+  margin-left: 25.333%;
+}
+
 .main {
-  width: 74.5687%;
+  width: 100%;
   height: 570px;
-  float: right;
   padding: 15px 15px 0;
   overflow-y: auto;
   overflow-x: hidden;
